package NTruePrompter.NAudioCodec.NProto;

enum ECodec {
    RAW_PCM_F32LE = 10;
    OGG_VORBIS = 20;
    OGG_OPUS = 30;
    MPEG_MP3 = 40;
}

message TAudioMeta {
    optional ECodec codec = 1;
    optional int32 sample_rate = 2;
}
